added notebook to test functionality of rescaling factors

--- a/docs/notebooks/201_zebrafish_continuous.ipynb
+++ b/docs/notebooks/201_zebrafish_continuous.ipynb
@@ -34,8 +34,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/icb/dominik.klein/mambaforge/envs/cellflow/lib/python3.12/site-packages/optuna/study/_optimize.py:29: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from optuna import progress_bar as pbar_module\n"
+      "c:\\Users\\anike\\anaconda3\\envs\\cellflow311\\Lib\\site-packages\\requests\\__init__.py:86: RequestsDependencyWarning: Unable to find acceptable character detection dependency (chardet or charset_normalizer).\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\anike\\anaconda3\\envs\\cellflow311\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -55,7 +57,7 @@
     "import matplotlib.pyplot as plt\n",
     "import anndata as ad\n",
     "import scanpy as sc\n",
-    "import rapids_singlecell as rsc\n",
+    "# import rapids_singlecell as rsc\n",
     "import flax.linen as nn\n",
     "import optax\n",
     "import cellflow\n",
@@ -109,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "4d85e49a-1238-48d9-a9ed-02d60f03bc05",
    "metadata": {},
    "outputs": [
@@ -357,7 +359,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "684d2187-f460-4c0c-a90d-28884ae98a43",
    "metadata": {},
    "outputs": [
@@ -506,7 +508,7 @@
        "(552284, 16581)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "439abf26-eda6-4f0f-991d-dc850f5bdefa",
    "metadata": {},
    "outputs": [],
@@ -873,16 +875,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
+   "id": "008d26cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['A03_B01_P01-B03_LIG140', 'A03_B01_P02-D06_LIG271',\n",
+      "       'A03_B01_P03-F10_LIG321', 'A03_B01_P04-C02_LIG43',\n",
+      "       'A03_B02_P02-A06_LIG250', 'A03_B02_P02-F08_LIG378',\n",
+      "       'A03_B03_P02-A12_LIG47', 'A03_B03_P03-C08_LIG103',\n",
+      "       'A03_B03_P03-E03_LIG122', 'A03_B04_P01-F06_LIG48',\n",
+      "       ...\n",
+      "       'H07_D07_P03-A02_LIG135', 'H07_D08_P02-D05_LIG299',\n",
+      "       'H07_D08_P03-A08_LIG87', 'H07_D11_P01-A09_LIG213',\n",
+      "       'H07_D11_P04-G11_LIG182', 'H07_D12_P02-E04_LIG351',\n",
+      "       'H07_D12_P03-E01_LIG43', 'H07_D12_P04-D12_LIG170',\n",
+      "       'H07_D12_P04-G11_LIG351', 'H07_D12_P04-G12_LIG192'],\n",
+      "      dtype='object', length=1671)\n"
+     ]
+    }
+   ],
+   "source": [
+    "mask = ~adata_test.obs[\"is_control\"].to_numpy()\n",
+    "\n",
+    "# Get the index (obs_names) of the matching entry\n",
+    "matching_indices = adata_test.obs.index[mask]\n",
+    "\n",
+    "print(matching_indices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "7c83aa9b-7da8-4988-bdce-741f909edeb8",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 70/70 [00:00<00:00, 503.81it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 459.65it/s]\n"
+     "ename": "ValueError",
+     "evalue": "Model not trained. Please call `train` first.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m covariate_data_train = adata_train[~adata_train.obs[\u001b[33m\"\u001b[39m\u001b[33mis_control\u001b[39m\u001b[33m\"\u001b[39m].to_numpy()].obs.drop_duplicates(subset=[\u001b[33m\"\u001b[39m\u001b[33mcondition\u001b[39m\u001b[33m\"\u001b[39m])\n\u001b[32m      2\u001b[39m covariate_data_test = adata_test[~adata_test.obs[\u001b[33m\"\u001b[39m\u001b[33mis_control\u001b[39m\u001b[33m\"\u001b[39m].to_numpy()].obs.drop_duplicates(subset=[\u001b[33m\"\u001b[39m\u001b[33mcondition\u001b[39m\u001b[33m\"\u001b[39m])\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m df_embedding_train = cf.get_condition_embedding(covariate_data=covariate_data_train, condition_id_key=\u001b[33m\"\u001b[39m\u001b[33mcondition\u001b[39m\u001b[33m\"\u001b[39m, rep_dict=adata_train.uns)[\u001b[32m0\u001b[39m]\n\u001b[32m      5\u001b[39m df_embedding_test = cf.get_condition_embedding(covariate_data=covariate_data_test, condition_id_key=\u001b[33m\"\u001b[39m\u001b[33mcondition\u001b[39m\u001b[33m\"\u001b[39m, rep_dict=adata_train.uns)[\u001b[32m0\u001b[39m]\n\u001b[32m      7\u001b[39m df_embedding_train[\u001b[33m\"\u001b[39m\u001b[33mseen_during_training\u001b[39m\u001b[33m\"\u001b[39m] = \u001b[38;5;28;01mTrue\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\OneDrive\\Documents\\GitHub\\CellFlow\\src\\cellflow\\model\\_cellflow.py:678\u001b[39m, in \u001b[36mCellFlow.get_condition_embedding\u001b[39m\u001b[34m(self, covariate_data, rep_dict, condition_id_key, key_added)\u001b[39m\n\u001b[32m    650\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"Get the embedding of the conditions.\u001b[39;00m\n\u001b[32m    651\u001b[39m \n\u001b[32m    652\u001b[39m \u001b[33;03mOutputs the mean and variance of the learnt embeddings\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    675\u001b[39m \u001b[33;03mA :class:`tuple` of :class:`~pandas.DataFrame` with the mean and variance of the condition embeddings.\u001b[39;00m\n\u001b[32m    676\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    677\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.solver \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m.solver.is_trained:\n\u001b[32m--> \u001b[39m\u001b[32m678\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mModel not trained. Please call `train` first.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    680\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(covariate_data, \u001b[33m\"\u001b[39m\u001b[33mcondition_data\u001b[39m\u001b[33m\"\u001b[39m):\n\u001b[32m    681\u001b[39m     cond_data = covariate_data\n",
+      "\u001b[31mValueError\u001b[39m: Model not trained. Please call `train` first."
      ]
     }
    ],
@@ -1000,8 +1040,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "c5709fd8-4675-4805-ac90-25f2c5ead19b",
+   "execution_count": 9,
+   "id": "2fdb0b64",
    "metadata": {},
    "outputs": [
     {
@@ -1036,6 +1076,7 @@
        "      <th>cell_type_sub</th>\n",
        "      <th>cell_type_broad</th>\n",
        "      <th>...</th>\n",
+       "      <th>hash_plate</th>\n",
        "      <th>log.hash_umis</th>\n",
        "      <th>gene1+gene2</th>\n",
        "      <th>gene_target_1</th>\n",
@@ -1045,12 +1086,11 @@
        "      <th>first_t_control</th>\n",
        "      <th>logtime</th>\n",
        "      <th>germ_layer_adapted</th>\n",
-       "      <th>first_t_control_str</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>A03_B01_P01-B03_LIG140</th>\n",
        "      <td>A03_B01_P01-B03_LIG140</td>\n",
        "      <td>0.640595</td>\n",
        "      <td>291.0</td>\n",
@@ -1062,78 +1102,7 @@
        "      <td>neural progenitor (hindbrain)</td>\n",
        "      <td>neural progenitor (hindbrain)</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.954243</td>\n",
-       "      <td>cdx4+cdx1a</td>\n",
-       "      <td>cdx4</td>\n",
-       "      <td>cdx1a</td>\n",
-       "      <td>cdx4_cdx1a_18</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2.890372</td>\n",
-       "      <td>ectoderm_neural_crest</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>A03_B01_P01-B03_LIG140</td>\n",
-       "      <td>0.640595</td>\n",
-       "      <td>291.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>24h_cdx4-cdx1a_P12_G10</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>6.017207</td>\n",
-       "      <td>neural progenitor (hindbrain)</td>\n",
-       "      <td>neural progenitor (hindbrain)</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.954243</td>\n",
-       "      <td>cdx4+cdx1a</td>\n",
-       "      <td>cdx4</td>\n",
-       "      <td>cdx1a</td>\n",
-       "      <td>cdx4_cdx1a_20</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2.995732</td>\n",
-       "      <td>ectoderm_neural_crest</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>A03_B01_P01-B03_LIG140</td>\n",
-       "      <td>0.640595</td>\n",
-       "      <td>291.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>24h_cdx4-cdx1a_P12_G10</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>6.017207</td>\n",
-       "      <td>neural progenitor (hindbrain)</td>\n",
-       "      <td>neural progenitor (hindbrain)</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.954243</td>\n",
-       "      <td>cdx4+cdx1a</td>\n",
-       "      <td>cdx4</td>\n",
-       "      <td>cdx1a</td>\n",
-       "      <td>cdx4_cdx1a_22</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>3.091042</td>\n",
-       "      <td>ectoderm_neural_crest</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>A03_B01_P01-B03_LIG140</td>\n",
-       "      <td>0.640595</td>\n",
-       "      <td>291.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>24h_cdx4-cdx1a_P12_G10</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>6.017207</td>\n",
-       "      <td>neural progenitor (hindbrain)</td>\n",
-       "      <td>neural progenitor (hindbrain)</td>\n",
-       "      <td>...</td>\n",
+       "      <td>P12</td>\n",
        "      <td>0.954243</td>\n",
        "      <td>cdx4+cdx1a</td>\n",
        "      <td>cdx4</td>\n",
@@ -1143,86 +1112,68 @@
        "      <td>False</td>\n",
        "      <td>3.178054</td>\n",
        "      <td>ectoderm_neural_crest</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>A03_B01_P01-B03_LIG140</td>\n",
-       "      <td>0.640595</td>\n",
-       "      <td>291.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>24h_cdx4-cdx1a_P12_G10</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>6.017207</td>\n",
-       "      <td>neural progenitor (hindbrain)</td>\n",
-       "      <td>neural progenitor (hindbrain)</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.954243</td>\n",
-       "      <td>cdx4+cdx1a</td>\n",
-       "      <td>cdx4</td>\n",
-       "      <td>cdx1a</td>\n",
-       "      <td>cdx4_cdx1a_26</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>3.258097</td>\n",
-       "      <td>ectoderm_neural_crest</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 37 columns</p>\n",
+       "<p>1 rows × 36 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     cell  Size_Factor  n.umi  perc_mitochondrial_umis  \\\n",
-       "0  A03_B01_P01-B03_LIG140     0.640595  291.0                      0.0   \n",
-       "1  A03_B01_P01-B03_LIG140     0.640595  291.0                      0.0   \n",
-       "2  A03_B01_P01-B03_LIG140     0.640595  291.0                      0.0   \n",
-       "3  A03_B01_P01-B03_LIG140     0.640595  291.0                      0.0   \n",
-       "4  A03_B01_P01-B03_LIG140     0.640595  291.0                      0.0   \n",
+       "                                          cell  Size_Factor  n.umi  \\\n",
+       "A03_B01_P01-B03_LIG140  A03_B01_P01-B03_LIG140     0.640595  291.0   \n",
        "\n",
-       "   timepoint                   Oligo  hash_umis  top_to_second_best_ratio  \\\n",
-       "0       24.0  24h_cdx4-cdx1a_P12_G10        9.0                  6.017207   \n",
-       "1       24.0  24h_cdx4-cdx1a_P12_G10        9.0                  6.017207   \n",
-       "2       24.0  24h_cdx4-cdx1a_P12_G10        9.0                  6.017207   \n",
-       "3       24.0  24h_cdx4-cdx1a_P12_G10        9.0                  6.017207   \n",
-       "4       24.0  24h_cdx4-cdx1a_P12_G10        9.0                  6.017207   \n",
+       "                        perc_mitochondrial_umis  timepoint  \\\n",
+       "A03_B01_P01-B03_LIG140                      0.0       24.0   \n",
        "\n",
-       "                   cell_type_sub                cell_type_broad  ...  \\\n",
-       "0  neural progenitor (hindbrain)  neural progenitor (hindbrain)  ...   \n",
-       "1  neural progenitor (hindbrain)  neural progenitor (hindbrain)  ...   \n",
-       "2  neural progenitor (hindbrain)  neural progenitor (hindbrain)  ...   \n",
-       "3  neural progenitor (hindbrain)  neural progenitor (hindbrain)  ...   \n",
-       "4  neural progenitor (hindbrain)  neural progenitor (hindbrain)  ...   \n",
+       "                                         Oligo  hash_umis  \\\n",
+       "A03_B01_P01-B03_LIG140  24h_cdx4-cdx1a_P12_G10        9.0   \n",
        "\n",
-       "  log.hash_umis gene1+gene2  gene_target_1  gene_target_2      condition  \\\n",
-       "0      0.954243  cdx4+cdx1a           cdx4          cdx1a  cdx4_cdx1a_18   \n",
-       "1      0.954243  cdx4+cdx1a           cdx4          cdx1a  cdx4_cdx1a_20   \n",
-       "2      0.954243  cdx4+cdx1a           cdx4          cdx1a  cdx4_cdx1a_22   \n",
-       "3      0.954243  cdx4+cdx1a           cdx4          cdx1a  cdx4_cdx1a_24   \n",
-       "4      0.954243  cdx4+cdx1a           cdx4          cdx1a  cdx4_cdx1a_26   \n",
+       "                        top_to_second_best_ratio  \\\n",
+       "A03_B01_P01-B03_LIG140                  6.017207   \n",
        "\n",
-       "   is_control  first_t_control   logtime     germ_layer_adapted  \\\n",
-       "0       False            False  2.890372  ectoderm_neural_crest   \n",
-       "1       False            False  2.995732  ectoderm_neural_crest   \n",
-       "2       False            False  3.091042  ectoderm_neural_crest   \n",
-       "3       False            False  3.178054  ectoderm_neural_crest   \n",
-       "4       False            False  3.258097  ectoderm_neural_crest   \n",
+       "                                        cell_type_sub  \\\n",
+       "A03_B01_P01-B03_LIG140  neural progenitor (hindbrain)   \n",
        "\n",
-       "  first_t_control_str  \n",
-       "0               False  \n",
-       "1               False  \n",
-       "2               False  \n",
-       "3               False  \n",
-       "4               False  \n",
+       "                                      cell_type_broad  ... hash_plate  \\\n",
+       "A03_B01_P01-B03_LIG140  neural progenitor (hindbrain)  ...        P12   \n",
        "\n",
-       "[5 rows x 37 columns]"
+       "                       log.hash_umis  gene1+gene2  gene_target_1  \\\n",
+       "A03_B01_P01-B03_LIG140      0.954243   cdx4+cdx1a           cdx4   \n",
+       "\n",
+       "                        gene_target_2      condition  is_control  \\\n",
+       "A03_B01_P01-B03_LIG140          cdx1a  cdx4_cdx1a_24       False   \n",
+       "\n",
+       "                        first_t_control   logtime     germ_layer_adapted  \n",
+       "A03_B01_P01-B03_LIG140            False  3.178054  ectoderm_neural_crest  \n",
+       "\n",
+       "[1 rows x 36 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "covariate_data_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c5709fd8-4675-4805-ac90-25f2c5ead19b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'covariate_data_test' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 11\u001b[39m\n\u001b[32m      7\u001b[39m         result = pd.concat([result, new_rows], ignore_index=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m      9\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m result\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m covariate_data_interpolated = duplicate_and_interpolate(covariate_data_test, \u001b[33m'\u001b[39m\u001b[33mlogtime\u001b[39m\u001b[33m'\u001b[39m, \u001b[32m18\u001b[39m, \u001b[32m36\u001b[39m, \u001b[32m10\u001b[39m)\n\u001b[32m     12\u001b[39m covariate_data_interpolated.loc[:, \u001b[33m\"\u001b[39m\u001b[33mcondition\u001b[39m\u001b[33m\"\u001b[39m] = covariate_data_interpolated.apply(\u001b[38;5;28;01mlambda\u001b[39;00m x: \u001b[33m\"\u001b[39m\u001b[33m_\u001b[39m\u001b[33m\"\u001b[39m.join([x.gene_target, \u001b[38;5;28mstr\u001b[39m(\u001b[38;5;28mint\u001b[39m(np.round(np.exp(x.logtime))))]), axis=\u001b[32m1\u001b[39m)\n\u001b[32m     13\u001b[39m covariate_data_interpolated.head()\n",
+      "\u001b[31mNameError\u001b[39m: name 'covariate_data_test' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1416,9 +1367,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cellflow",
+   "display_name": "cellflow311",
    "language": "python",
-   "name": "cellflow"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1430,7 +1381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
